css/signup.css
.body-signup {
    background-color: #f6f7f8;
    min-height: 100vh;
    max-width: 1920px;
}

html,
body {
    font-family: open-sans, sans-serif;
    background-color: #f6f7f8;
    min-height: 100vh;
}

.main-container-join {
    display: flex;
    align-items: center;
    flex-direction: column;
    height: 100vh;
    max-width: 1920px;
    max-height: 1080px;

}

.hide-scrollbar {
    overflow-y: auto;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

.hide-scrollbar::-webkit-scrollbar {
    display: none;
}

.red-border {
    border: 1px solid red;
}

.container-join-content {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 100vh;
    width: 80%;
}

.join-logo {
    width: 100px;
    height: 121px;
    margin-left: 50px;
    margin-top: 50px;
}

.join-logo-container-signup {
    display: flex;
    justify-content: flex-start;
    max-width: 1920px;
    width: 100%;
    max-height: 150px;
}

.failure-signup-div {
    color: red;
    font-size: 14px;
    margin-top: -20px;
    height: 10px;
    z-index: 2;
}

.display-none {
    display: none;
}

.signup-main-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 598px;
    height: 630px;
    top: 197px;
    left: 421px;
    border-radius: 30px;
    background-color: #FFFFFF;
    margin-top: 100px;
}

.hr-line-signup {
    height: 2.5px;
    width: 120px;
    border-radius: 30px;
}

.title-text-arrow-div {
    display: flex;
    width: 100%;
}

.title-text-div-headline {
    margin-bottom: 0px;
    margin-top: 0px;
}

.signup-underline {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.arrow-box {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    height: 30px;
    width: 100%;
    left: 38%;
    transform: translateX(-50%);
}

.arrow-left {
    width: 30px;
    height: 30px;
    border-radius: 50%;
}

.arrow-left:hover {
    background-color: #f2f2f2;
    cursor: pointer;
}

.underline-headline-container {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    position: relative;
    margin-top: 48px;
}

.underline-headline-container a {
    position: absolute;
    left: 50px;
}

.title {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 61px;
    font-weight: 700;
    width: 100%;
    height: 630px;
    border-radius: 30px;
    box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.3);
}

.signup-content {
    width: 315px;
    height: 89px;
    gap: 16px;

}

.signup-inputfield-container {
    display: flex;
    flex-direction: column;
    width: 422px;
    height: 326px;
    margin-top: 32px;
    gap: 34px;
    background-color: #FFFFFF;
}

.signup-title {
    width: 315px;
    height: 89px;
    Gap: 16px
}

.underline-text-singup {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 12px;
    background-color: white;
}

.inputfield-name {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 48px;
    background-color: #FFFFFF;
    border-width: 1px;
    gap: 8px;
    border-radius: 10px;
    padding-top: 12px;
    padding-right: 21px;
    padding-bottom: 12px;
    padding-left: 21px;
    cursor: pointer;
}

.inputfield-name:focus {
    border: 1px solid #29ABE2;
    outline: none;
}


.inputfield-email {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 48px;
    background-color: #FFFFFF;
    border-width: 1px;
    gap: 8px;
    border-radius: 10px;
    padding-top: 12px;
    padding-right: 21px;
    padding-bottom: 12px;
    padding-left: 21px;
    cursor: pointer;
}

.inputfield-email:focus {
    border: 1px solid #29ABE2;
    outline: none;
}


.inputfield-password {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 48px;
    border-width: 1px;
    gap: 8px;
    border-radius: 10px;
    padding-top: 12px;
    padding-right: 21px;
    padding-bottom: 12px;
    padding-left: 21px;
    background-color: #FFFFFF;
    cursor: pointer;
}

.inputfield-password:focus {
    border: 1px solid #29ABE2;
    outline: none;
}

.inputfield-confirm {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 48px;
    gap: 8px;
    border-radius: 10px;
    padding-top: 12px;
    padding-right: 21px;
    padding-bottom: 12px;
    padding-left: 21px;
    background-color: #FFFFFF;
    cursor: pointer;
}

.grey-border {
    border: 1px solid #A8A8A8;
}

.inputfield-confirm:focus {
    border: 1px solid #29ABE2;
    outline: none;
}

.email-icon-size {
    position: relative;
    width: 16px;
    height: 16px;
    bottom: 37px;
    left: 390px;
}

.name-icon-size {
    position: relative;
    width: 16px;
    height: 16px;
    bottom: 40px;
    left: 390px;
}

.lock-icon-size-first {
    position: relative;
    width: 16px;
    height: 16px;
    left: 390px;
    bottom: 37px;
}

.eye-icon-size-postition {
    position: absolute;
    width: 18px;
    height: 18px;
    right: -27px;
    top: 85%;
    transform: translateY(-50%);
    z-index: 5;
}

.eye-icon-size-postition-confirm {
    position: absolute;
    width: 18px;
    height: 18px;
    right: -27px;
    top: 85%;
    transform: translateY(-50%);
    z-index: 5;
}

.lock-icon-size-second {
    position: relative;
    width: 16px;
    height: 16px;
    left: 390px;
    bottom: 37px;
}


.inputfield::placeholder {
    font-weight: 400;
    font-size: 20px;
    line-height: 120%;
    letter-spacing: 0%;
    margin-left: 21px;
}

.name-box {
    display: flex;
    flex-direction: column;
    gap: 8px;
    width: 380px;
    height: 24px;
    justify-content: space-between;


}

.email-box {
    display: flex;
    flex-direction: column;
    gap: 8px;
    width: 380px;
    height: 24px;
    justify-content: space-between;

}
/* ... */

